--- a/package.json
+++ b/package.json
@@ -18,7 +18,18 @@
     "sails-mongo": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "5.16.0"
+    "eslint": "5.16.0",
+    "@sailshq/connect-redis": "^3.2.1",
+    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/socket.io-redis": "^5.2.0",
+    "grunt": "1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "razorpay": "^2.0.6",
+    "sails": "^1.4.3",
+    "sails-hook-grunt": "^4.0.0",
+    "sails-hook-orm": "^3.0.2",
+    "sails-hook-sockets": "^2.0.0",
+    "sails-mongo": "^2.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
